<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logo"
        app:srcCompat="@drawable/logo"
        android:id="@+id/splashLogoView"
        app:layout_constraintVertical_bias="0.1"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashLogoView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/splashAppNameView"
        android:layout_marginTop="20dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppNameView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="COVID-19 Assistant"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintVertical_bias="0"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:id="@+id/splashAppTagView"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppTagView"
        app:layout_constraintBottom_toTopOf="@+id/appinfoText"
        android:text="Check your risk for COVID-19"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintVertical_bias="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppTagView"
        app:layout_constraintBottom_toTopOf="@+id/appDeclarationView"
        android:text="@string/appinfoText"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/appinfoText"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppTagView"
        app:layout_constraintBottom_toTopOf="@+id/privacyPolicy"
        android:text="@string/appDeclarationText"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="1"
        android:id="@+id/appDeclarationView"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppTagView"
        app:layout_constraintBottom_toTopOf="@+id/splashStartBtn"
        app:layout_constraintVertical_bias="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/privacyPolicy"
        android:layout_marginEnd="30dp"
        android:onClick="openPrivacyPolicy"
        android:gravity="center"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashAppTagView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintVertical_bias="1"
        app:cardBackgroundColor="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/splashStartBtn"
        android:clickable="true"
        android:focusable="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Start Survey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>